--- a/mongo/.env
+++ b/mongo/.env
@@ -1,4 +1,4 @@
 MONGO_DB_NAME=mongodb
 MONGO_USERNAME=root
 MONGO_PASSWORD=crow
-MONGO_URL=mongodb://root:crow@172.20.0.2
+MONGO_URL=mongodb://root:crow@<ip_del_contenedor_docker>
